--- a/PortfolioAssignment/Views/Shared/_Layout.cshtml
+++ b/PortfolioAssignment/Views/Shared/_Layout.cshtml
@@ -1,21 +1,14 @@
-@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PortfolioAssignment</title>
-
-    <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
@@ -28,13 +21,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PortfolioAssignment</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SF Portfolio</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Posts" asp-action="Index">Blog</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+                                <li><a asp-area="" asp-controller="Account" asp-action="Index">Logout</a></li>
+                        }
+                        else
+                        {
+                            <li><a asp-area="" asp-controller="Account" asp-action="Index">Admin Login</a></li>
+
+                        }
+                    }
                 </ul>
             </div>
         </div>
