change to bootstrap 4.0, bug with navbar opening strangely

--- a/PortfolioAssignment/Views/Home/Index.cshtml
+++ b/PortfolioAssignment/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 
 <p>I'm a junior developer with skills centered in web development in Javascript, Angular, and .Net.</p>
 
+<img src="~/images/waterfront4_edited.jpg" class="me" alt="Picture of Stephanie" />
 
 
 
