--- a/PortfolioAssignment/Views/Home/Index.cshtml
+++ b/PortfolioAssignment/Views/Home/Index.cshtml
@@ -1,12 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<br />
 <h2 class="text-center">Hi, I'm Stephanie</h2>
 
 <p>I'm a junior developer with skills centered in web development in Javascript, Angular, and .Net.</p>
 
 <img src="~/images/waterfront4_edited.jpg" class="me" alt="Picture of Stephanie" />
+<hr />
+<h4>Education</h4>
+<br />
+<address>
+    <h5>Epicodus</h5>
+    Expected Graduation: June 2018<br />
+    Skills: C#/.Net, JavaScript Track<br />
+    <a href="https://github.com/eyesicedover">Github</a>
+</address>
+<address>
+    <h5>California Statue University, Fullerton</h5>
+    Graduated: May 2016<br />
+    Bachelor of Arts, Psychology
+</address>
 
 
 
