--- a/PortfolioAssignment/Views/Posts/Index.cshtml
+++ b/PortfolioAssignment/Views/Posts/Index.cshtml
@@ -1,1 +1,29 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Blog";
+}
+@model 
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="card card-body">
+        <div class="row">
+            <div class="col-sm-4">
+                <form action="/Posts/Create" method="post">
+                    <button class="btn btn-primary">Create</button>
+                </form>
+            </div>
+            <div class="col-sm-4">
+                <form action="/Posts/DeleteAll" method="post">
+                    <button class="btn btn-danger">Delete All</button>
+                </form>
+            </div>
+        </div>
+    </div>
+}
+@foreach (var post in Model)
+{
+    <div class="card card-body">
+        <h4 class="card-title">post.</h4>
+
+    </div>
+}
+
