--- a/PortfolioAssignment/Views/Posts/Index.cshtml
+++ b/PortfolioAssignment/Views/Posts/Index.cshtml
@@ -5,14 +5,16 @@
 
 <br />
 <h3>Welcome to My Blog</h3>
-<br />
+<hr />
 
 @if (User.Identity.IsAuthenticated)
 {
     <div class="card card-body">
         <div class="row">
+            <div class="col-sm-2">
+            </div>
             <div class="col-sm-4">
-                <form action="/Posts/Create" method="post">
+                <form action="/Posts/Create" method="get">
                     <button class="btn btn-primary">Create</button>
                 </form>
             </div>
@@ -21,6 +23,8 @@
                     <button class="btn btn-danger">Delete All</button>
                 </form>
             </div>
+            <div class="col-sm-2">
+            </div>
         </div>
     </div>
 }
@@ -28,18 +32,39 @@
 {
     @foreach (var post in Model)
     {
-        <div class="card card-body">
-            <h4 class="card-title">@post.PostDate</h4>
-            <p>@post.Content</p>
+    <div class="card card-body">
+        <h4 class="card-title">@post.PostDate</h4>
+        <p>@post.Content</p>
+        <p><a href="/Posts/Details/@post.PostId">Comments</a></p>
 
+        @if (User.Identity.IsAuthenticated)
+    {
+        <div class="row">
+            <div class="col-sm-2">
+            </div>
+            <div class="col-sm-4">
+                <form action="/Posts/Edit/@post.PostId" method="get">
+                    <button class="btn btn-success">Edit</button>
+                </form>
+            </div>
+            <div class="col-sm-4">
+                <form action="/Posts/Delete" method="post">
+                    <input type="hidden" name="postId" value="@post.PostId" />
+                    <button class="btn btn-danger">Delete This Post</button>
+                </form>
+            </div>
+            <div class="col-sm-2">
+            </div>
         </div>
+}
+    </div>
     }
-
 }
 else
 {
-    <h3>Check back later, there aren't any posts yet!</h3>
-
+    <div class="card card-body">
+        <h4>Check back later, there aren't any posts yet!</h4>
+    </div>
 }
 
 
