--- a/PortfolioAssignment/wwwroot/css/site.css
+++ b/PortfolioAssignment/wwwroot/css/site.css
@@ -15,10 +15,18 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 400px;
 }
 
 .me {
     max-width: 60% !important;
     height: auto;
+}
+
+.card, card-body {
+    margin-bottom: 10px;
+}
+
+nav {
+    margin-bottom: 20px;
 }
