--- a/PortfolioAssignment/Views/Posts/Details.cshtml
+++ b/PortfolioAssignment/Views/Posts/Details.cshtml
@@ -1,9 +1,49 @@
 ﻿@{
     ViewData["Title"] = "Blog";
+    var count = 1;
 }
 @model PortfolioAssignment.Models.Post
 
-<div class="card card-body">
+<div class="row card card-body">
     <h2>@Model.PostDate</h2>
     <h5>@Model.Content</h5>
+</div>
+<div class="row">
+    <div class="col-sm-7 card card-body">
+        <h4>Post Comments</h4>
+        <hr />
+        @if (Model.Comments.Count() > 0)
+        {
+
+            @foreach (var comment in Model.Comments)
+            {
+                <p><i>@comment.Author</i> says:</p>
+                <p>@comment.Content</p>
+                @if (count == 1)
+                {
+                    count++;
+                }
+                else
+                {
+                    <hr />
+                }
+            }
+        }
+        else
+        {
+            <p>There are no comments for this post</p>
+
+        }
+    </div>
+    <div class="col-sm-5 card card-body">
+        <h4>Add A Comment</h4>
+        <hr />
+        <form action="/Comments/Create" method="post" class="form-group">
+            <input class="form-control" type="hidden" name="postId" value="@Model.PostId" />
+            <input class="form-control" type="text" name="author" placeholder="Your Name" />
+            <br />
+            <textarea class="form-control" name="content" placeholder="Your Comment"></textarea><br />
+            <button class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </div>
