--- a/PortfolioAssignment/Views/Posts/Index.cshtml
+++ b/PortfolioAssignment/Views/Posts/Index.cshtml
@@ -43,14 +43,12 @@
             <div class="col-sm-2">
             </div>
             <div class="col-sm-4">
-                <form action="/Posts/Edit/@post.PostId" method="get">
-                    <button class="btn btn-success">Edit</button>
-                </form>
+                <a href="/Posts/Edit/@post.PostId" class="btn btn-success">Edit</a>
             </div>
             <div class="col-sm-4">
                 <form action="/Posts/Delete" method="post">
-                    <input type="hidden" name="postId" value="@post.PostId" />
-                    <button class="btn btn-danger">Delete This Post</button>
+                    <input type="text" name="postId" value="@post.PostId" />
+                    <button class="btn btn-danger" type="submit">Delete This Post</button>
                 </form>
             </div>
             <div class="col-sm-2">
