--- a/PortfolioAssignment/Views/Shared/_Layout.cshtml
+++ b/PortfolioAssignment/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Posts" asp-action="Index">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Github">Github</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right ml-auto">
                 @{
