--- a/PortfolioAssignment/Views/Shared/_Layout.cshtml
+++ b/PortfolioAssignment/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         </button>
         <div class="collapse navbar-collapse"  id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Posts" asp-action="Index">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Github">Github</a></li>
